[package]
name = "ad-census"
version = "0.1.0"
authors = ["Squall Zhong <squallhong@outlook.com>"]
readme = "README.md"
description = "A Rust library for AD-Census."
license = "MIT"
categories = ["Computer vision", "Images"]
keywords = ["stereo", "adcensus"]
edition = "2018"
repository = "https://github.com/squallzhong/AD-Census-rs"

[features]
default = ["ndarray", "ndarray-stats", "nshare", "ndhistogram"]

[dependencies]
getset = "0.1.1"
image = "0.23.11"

#log
log = "0.4.14"
log4rs = "1.0.0"

#计时
stopwatch = "0.0.7"

ndarray = {version = "0.15.3", features = ["rayon", "matrixmultiply-threading"], optional = true }
ndarray-stats = {version = "0.5.0", optional = true}
nshare = {version = "0.7.0", features = ["ndarray", "image"], optional = true}
ndhistogram = {version = "0.6.2", optional = true}

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "ad-census"
harness = false
